--- a/style.css
+++ b/style.css
@@ -30,7 +30,7 @@
 .task, .task-name {
   width: 56%;
   display: inline-block;
-  flex-grow: 1
+  flex-grow: 1;
 }
 .task-row-wrapper {
   display: flex;
@@ -127,18 +127,18 @@
 
 /* Completed */
 #completed-tasks .task-name {
-  text-decoration: line-through
+  text-decoration: line-through;
   color: #888;
 }
 
 /* Edit Task */
 .task-hide {
-  display: none
+  display: none;
 }
 
 .edit-mode .task-hide {
   display: inline-block;
-  width: 224px
+  width: 224px;
 }
 
 .edit-mode .task-name {
