--- a/style.css
+++ b/style.css
@@ -27,7 +27,8 @@
   width: 500px;
   margin: 0 auto 0;
 }
-.task, .task-name {
+.task,
+.task-name {
   width: 56%;
   display: inline-block;
   flex-grow: 1;
@@ -39,10 +40,12 @@
   margin: 0;
   padding: 0px;
 }
-.list-item, .title {
+.list-item,
+.title {
   list-style: none;
 }
-.task,.btn{
+.task,
+.btn{
   outline: none;
 }
 .btn {
