--- a/style.css
+++ b/style.css
@@ -10,10 +10,10 @@
   display: block;
   text-align: right;
 }
-.header-img {
+.header__img {
   width: 100%;
 }
-.header-more-inf {
+.header__more-inf {
   font-family: fantasy, cursive;
 }
 
@@ -40,7 +40,7 @@
   margin: 0;
   padding: 0px;
 }
-.list-item,
+.list__item,
 .title {
   list-style: none;
 }
@@ -97,7 +97,7 @@
 }
 
 /* Task list */
-.list-item {
+.list__item {
   overflow: hidden;
   padding: 20px 0;
   border-bottom: 1px solid #eee;
